js/src/jit-test/tests/binast/invalid/param-unmatching-name.binjs
BINJS
[
GRAMMAR
]
identity
;
"
BindingIdentifier
(
AssertedDeclaredName
AssertedParameterScope
>
AssertedPositionalParameterName2AssertedScriptGlobalScope
AssertedVarScope0EagerFunctionDeclaration
FormalParameters0FunctionOrMethodContents
Script
[
STRINGS
]
identity
;
f
a
b
var
[
TREE
]
identity
;
H
